# src/api/routers/cars.go
@@ -112,3 +112,12 @@ func CarModelProperty(r *gin.RouterGroup, cfg *config.Config) {
 	r.GET("/:id", h.GetById)
 	r.POST("/get-by-filter", h.GetByFilter)
 }
+func CarModelComment(r *gin.RouterGroup, cfg *config.Config) {
+	h := handlers.NewCarModelCommentHandler(cfg)
+
+	r.POST("/", h.Create)
+	r.PUT("/:id", h.Update)
+	r.DELETE("/:id", h.Delete)
+	r.GET("/:id", h.GetById)
+	r.POST("/get-by-filter", h.GetByFilter)
+}
