# src/docs/swagger.yaml
@@ -6,6 +6,17 @@ definitions:
       id:
         type: integer
     type: object
+  CarSaleAd-Web-Api_api_dto.CarModelCommentResponse:
+    properties:
+      carModelId:
+        type: integer
+      id:
+        type: integer
+      message:
+        type: string
+      user:
+        $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.UerResponse'
+    type: object
   CarSaleAd-Web-Api_api_dto.CarModelImageResponse:
     properties:
       carModelId:
@@ -48,6 +59,10 @@ definitions:
       carModelImages:
         items:
           $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.CarModelImageResponse'
+        type: array
+      carModelProperties:
+        items:
+          $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.CarModelPropertyResponse'
         type: array
       carModelYears:
         items:
@@ -135,6 +150,20 @@ definitions:
     required:
     - carModelId
     - colorId
+    type: object
+  CarSaleAd-Web-Api_api_dto.CreateCarModelCommentRequest:
+    properties:
+      carModelId:
+        type: integer
+      message:
+        maxLength: 500
+        type: string
+      userId:
+        type: integer
+    required:
+    - carModelId
+    - message
+    - userId
     type: object
   CarSaleAd-Web-Api_api_dto.CreateCarModelImageRequest:
     properties:
@@ -374,6 +403,23 @@ definitions:
       items:
         items:
           $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.CarModelColorResponse'
+        type: array
+      pageNumber:
+        type: integer
+      totalPages:
+        type: integer
+      totalRows:
+        type: integer
+    type: object
+  CarSaleAd-Web-Api_api_dto.PagedList-CarSaleAd-Web-Api_api_dto_CarModelCommentResponse:
+    properties:
+      hasNextPage:
+        type: boolean
+      hasPreviousPage:
+        type: boolean
+      items:
+        items:
+          $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.CarModelCommentResponse'
         type: array
       pageNumber:
         type: integer
@@ -748,12 +794,33 @@ definitions:
       sort:
         type: string
     type: object
+  CarSaleAd-Web-Api_api_dto.UerResponse:
+    properties:
+      email:
+        type: string
+      firstName:
+        type: string
+      id:
+        type: integer
+      lastName:
+        type: string
+      username:
+        type: string
+    type: object
   CarSaleAd-Web-Api_api_dto.UpdateCarModelColorRequest:
     properties:
       carModelId:
         type: integer
       colorId:
         type: integer
+    type: object
+  CarSaleAd-Web-Api_api_dto.UpdateCarModelCommentRequest:
+    properties:
+      message:
+        maxLength: 500
+        type: string
+    required:
+    - message
     type: object
   CarSaleAd-Web-Api_api_dto.UpdateCarModelImageRequest:
     properties:
@@ -1094,6 +1161,157 @@ paths:
       summary: Get CarModelColors
       tags:
       - CarModelColor
+  /v1/car-model-comments/:
+    post:
+      consumes:
+      - application/json
+      description: Create a CarModelComment
+      parameters:
+      - description: Create a CarModelComment
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.CreateCarModelCommentRequest'
+      responses:
+        "201":
+          description: CarModelComment response
+          schema:
+            allOf:
+            - $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.CarModelCommentResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Create a CarModelComment
+      tags:
+      - CarModelComment
+  /v1/car-model-comments/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a CarModelComment
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: Response
+          schema:
+            $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Delete a CarModelComment
+      tags:
+      - CarModelComment
+    get:
+      consumes:
+      - application/json
+      description: Get a CarModelComment
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: CarModelComment Response
+          schema:
+            allOf:
+            - $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.CarModelCommentResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Get a CarModelComment
+      tags:
+      - CarModelComment
+    put:
+      consumes:
+      - application/json
+      description: Update a CarModelComment
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update a CarModelComment
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.UpdateCarModelCommentRequest'
+      responses:
+        "200":
+          description: CarModelComment response
+          schema:
+            allOf:
+            - $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.CarModelCommentResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Update a CarModelComment
+      tags:
+      - CarModelComment
+  /v1/car-model-comments/get-by-filter:
+    post:
+      consumes:
+      - application/json
+      description: Get CarModelComments
+      parameters:
+      - description: Request
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.PaginationInputWithFilter'
+      responses:
+        "200":
+          description: CarModelComment Response
+          schema:
+            allOf:
+            - $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.PagedList-CarSaleAd-Web-Api_api_dto_CarModelCommentResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Get CarModelComments
+      tags:
+      - CarModelComment
   /v1/car-model-images/:
     post:
       consumes:
