# src/services/car_model_comment_service.go
@@ -1,0 +1,56 @@
+package services
+
+import (
+	"CarSaleAd-Web-Api/api/dto"
+	"CarSaleAd-Web-Api/config"
+	"CarSaleAd-Web-Api/constants"
+	"CarSaleAd-Web-Api/data/db"
+	"CarSaleAd-Web-Api/data/models"
+	"CarSaleAd-Web-Api/pkg/logging"
+	"context"
+)
+
+type CarModelCommentService struct {
+	base *BaseService[models.CarModelComment, dto.CreateCarModelCommentRequest, dto.UpdateCarModelCommentRequest, dto.CarModelCommentResponse]
+}
+
+func NewCarModelCommentService(cfg *config.Config) *CarModelCommentService {
+	return &CarModelCommentService{
+		base: &BaseService[models.CarModelComment, dto.CreateCarModelCommentRequest, dto.UpdateCarModelCommentRequest, dto.CarModelCommentResponse]{
+			Database: db.GetDb(),
+			Logger:   logging.NewLogger(cfg),
+			Preloads: []preload{
+				{string: "User"},
+			},
+		},
+	}
+}
+
+func (s *CarModelCommentService) Create(ctx context.Context, req *dto.CreateCarModelCommentRequest) (*dto.CarModelCommentResponse, error) {
+	req.UserId = int(ctx.Value(constants.UserIdKey).(float64))
+	return s.base.Create(ctx, req)
+
+}
+
+//update
+
+func (s *CarModelCommentService) Update(ctx context.Context, id int, req *dto.UpdateCarModelCommentRequest) (*dto.CarModelCommentResponse, error) {
+	return s.base.Update(ctx, id, req)
+
+}
+
+//Delete
+
+func (s *CarModelCommentService) Delete(ctx context.Context, id int) error {
+
+	return s.base.Delete(ctx, id)
+}
+
+// GetById
+func (s *CarModelCommentService) GetById(ctx context.Context, id int) (*dto.CarModelCommentResponse, error) {
+	return s.base.GetById(ctx, id)
+
+}
+func (s *CarModelCommentService) GetByFilter(ctx context.Context, req *dto.PaginationInputWithFilter) (*dto.PagedList[dto.CarModelCommentResponse], error) {
+	return s.base.GetByFilter(ctx, req)
+}
